Added logger and done exception handling in service